# esp32_aes67_sender

./: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.sample
main/: CMakeLists.txt  Kconfig.projbuild  main.c  main.c.l16
main/ADMP441/: big-packet.c  main-dualcore.c  main.c  square-dualcore.c
main/PCM1808/: main.c
main/SPH0645/: main.c
main/config/: cmake_config.sample.txt
